Sum pairs problem

--- a/Array_problems.ipynb
+++ b/Array_problems.ipynb
@@ -92,6 +92,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "## 2. Array pair sum problem\n",
+    "Given an integer array, output all the unique pairs that sums up to a specific value of k.\n",
+    "\n",
+    "So the input will be:\n",
+    "                \n",
+    "                pair_sum([1,2,2,3], 4)\n",
+    "                \n",
+    "would return 2 pairs:\n",
+    "                (1,3)\n",
+    "                (2,2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to find the pairs\n",
+    "def pair_sum(arr, val):\n",
+    "    \n",
+    "    counter = 0   # Counter to count number of pairs possible\n",
+    "    lookup = set()  # A set of elements by eliminating repeatitive values\n",
+    "    pairs = []    # An array of the pairs possible\n",
+    "    \n",
+    "    # loop to check the pairs poosible\n",
+    "    for num in arr:\n",
+    "        if val-num in lookup:\n",
+    "            counter += 1\n",
+    "            pairs.append((num, val-num))\n",
+    "        else:\n",
+    "            lookup.add(num)\n",
+    "    \n",
+    "    return \"Total possible pairs are: \"+ str(counter) + \"\\npairs are: \" + str(pairs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total possible pairs are: 2\n",
+      "pairs are: [(3, 1), (2, 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = pair_sum([1,3,2,2], 4)\n",
+    "print(result)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
