Finding missing element problem

--- a/Array_problems.ipynb
+++ b/Array_problems.ipynb
@@ -160,11 +160,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "## 3. Find the missing element\n",
+    "Consider an array of non-negative integers. A second array is formed by shuffling the elements of first array and deleting a random element. Find which element is missing in the 2nd array.\n",
+    "\n",
+    "For ex:\n",
+    "\n",
+    "           finder([1,2,3,4,5,6,7], [3,7,2,1,4,6])\n",
+    "           \n",
+    "           missing element: 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Function to find the missing element in array\n",
+    "def finder(arr1, arr2):\n",
+    "    \n",
+    "    sum = 0\n",
+    "    for i in arr1:\n",
+    "        sum = sum + arr1[i]\n",
+    "    \n",
+    "    for i in arr2:\n",
+    "        sum = sum - arr2[i]\n",
+    "    \n",
+    "    return sum\n"
+   ]
   }
  ],
  "metadata": {
