--- a/Array_problems.ipynb
+++ b/Array_problems.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,13 +193,274 @@
     "    \n",
     "    sum = 0\n",
     "    for i in arr1:\n",
-    "        sum = sum + arr1[i]\n",
+    "        sum = sum + i\n",
     "    \n",
     "    for i in arr2:\n",
-    "        sum = sum - arr2[i]\n",
+    "        sum = sum - i\n",
     "    \n",
-    "    return sum\n"
+    "    return sum"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "finder([1,2,3,4,5,6,7], [3,7,2,1,4,6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to find multiple missing values\n",
+    "def find_multiple_values(arr1, arr2):\n",
+    "    \n",
+    "    numbers = {}  # Dictionary for the record of occurence of integers\n",
+    "    \n",
+    "    # Add numbers and their occurences in numbers dictionary\n",
+    "    for i in arr1:\n",
+    "        if i in numbers:\n",
+    "            numbers[i] += 1\n",
+    "        else:\n",
+    "            numbers[i] = 1\n",
+    "    \n",
+    "    # now deduct the occurences of numbers that are found in arr2 \n",
+    "    for i in arr2:\n",
+    "        if i in numbers:\n",
+    "            numbers[i] -= 1\n",
+    "    \n",
+    "    # now return the missing values\n",
+    "    missing_values = []\n",
+    "    for i in numbers:\n",
+    "        if numbers[i] != 0:\n",
+    "            missing_values.append(i)\n",
+    "    return missing_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 6]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_multiple_values([1,2,3,4,5,6,7], [3,7,2,1,4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 4. Find the largest continous sum\n",
+    "Given an array of integers(positive or negative) find the largest continous sum."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to find the largest continous sum\n",
+    "def largest_continous_sum(arr):\n",
+    "    \n",
+    "    if len(arr) == 0:\n",
+    "        return 0\n",
+    "    max_sum = current_sum = arr[0]\n",
+    "    \n",
+    "    for i in arr[1:]:\n",
+    "        current_sum = max(current_sum + i, i)\n",
+    "        max_sum = max(current_sum, max_sum)\n",
+    "    return max_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "largest_continous_sum([1,2,-1,3,4,10,10,-10,-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## 5. Reverse the String\n",
+    "Given a string of words, reverse all the words.\n",
+    "\n",
+    "For ex:\n",
+    "\n",
+    "          'This is the best'\n",
+    "Output:\n",
+    "\n",
+    "          'best the is This'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# String can also be reversed by using reversed function\n",
+    "# string = 'Hi there'\n",
+    "# string = \" \" + .join(reversed( string.split() ))\n",
+    "\n",
+    "# Mannual method to reverse the string\n",
+    "def string_reverse(string):\n",
+    "    \n",
+    "    \n",
+    "    string = string.split(' ')\n",
+    "    \n",
+    "    new_string = ''\n",
+    "    for i in string[::-1]:\n",
+    "        new_string = new_string + i + ' '\n",
+    "    return new_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'best the is This '"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string_reverse('This is the best')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## 6. String compression\n",
+    "Given a string like 'AAABBEED' should return 'A3B2E2D1'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to compress string\n",
+    "def string_compress(string):\n",
+    "    \n",
+    "    new_string = ''\n",
+    "    l = len(string)\n",
+    "    \n",
+    "    if l == 0:\n",
+    "        return string\n",
+    "    \n",
+    "    if l == 1:\n",
+    "        return string + '1'\n",
+    "    \n",
+    "    cnt = 1\n",
+    "    i = 1\n",
+    "    \n",
+    "    while i < l:\n",
+    "        if string[i] == string[i-1]:\n",
+    "            cnt += 1\n",
+    "        else:\n",
+    "            new_string = new_string + string[i-1] + str(cnt)\n",
+    "            cnt = 1\n",
+    "        \n",
+    "        i += 1\n",
+    "    new_string = new_string + string[i-1] + str(cnt)\n",
+    "    \n",
+    "    return new_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A3g2E2j1'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string_compress('AAAggEEj')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
