--- a/Array_problems.ipynb
+++ b/Array_problems.ipynb
@@ -456,6 +456,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## 6. Unique characters problem\n",
+    "Given a string, check if string contains all the unique characters or duplicate characters.\n",
+    "\n",
+    "For ex:\n",
+    "\n",
+    "        'abcde' should return True\n",
+    "        'aabcde' should return false"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to find unique characters\n",
+    "def unique_char(string):\n",
+    "    \n",
+    "    uni = set()\n",
+    "    \n",
+    "    for c in string:\n",
+    "        if c in uni:\n",
+    "            return False\n",
+    "        else:\n",
+    "            uni.add(c)\n",
+    "    \n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_char('abcde')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
